--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,23 +9,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      
+      - uses: actions/checkout@v3.1.0
       - name: Docker Login
-        uses: docker/login-action@v3.2.0
+        uses: docker/login-action@2.1.0
         with:
-         username: ${{ secrets.USER  }}
+         username: ${{ secrets.USER }}
          password: ${{ secrets.PASSWORD }}
-
-      - name: Build and push Docker images
-        uses: docker/build-push-action@v6.0.1
+         
+      - name: constucao imagem Docker3.2.0
+        uses: docker/build-push-action@v3.2.0
         with:
           context: .
-          file: .
+          file: ./Dockerfile
           push: true
           tags: |
             ssatangoss/dcodesxwv:v1
-            ssatangoss/dcodesxwv:latest
-         
-      
-    
+            ssatangoss/dcodesxwv:latest     
+
+  
